--- a/src/app/shared/modules/table/table.component.scss
+++ b/src/app/shared/modules/table/table.component.scss
@@ -3,6 +3,10 @@
 ::ng-deep {
   .ant-table.ant-table-small {
     font-family: sans-serif, monospace;
+    .ant-table-footer {
+      padding: 0.5rem;
+      background: $white;
+    }
   }
   .ant-table {
     color: $black;
