--- a/src/app/shared/modules/table/table.component.html
+++ b/src/app/shared/modules/table/table.component.html
@@ -71,8 +71,10 @@
     </ng-template>
   </tbody>
   <ng-template #footer>
-
-    <span nz-icon
+    <span class="download"
+          nz-tooltip
+          nzTooltipTitle="Download Excel"
+          nz-icon
           nzType="download"
           nzTheme="outline"
           (click)="onExportExcel()"></span>
