--- a/src/variables.scss
+++ b/src/variables.scss
@@ -97,7 +97,7 @@ $line-height: 150%;
 
 $transition: all 250ms ease-out;
 
-$tablet: 1023px; // desktop first
-$mobile: 767px;
+$tablet: 1024px;
+$mobile: 768px;
 
 $max-width-container: 100%;
