--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -5,7 +5,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-flow: row;
-  grid-gap: 0.5rem;
+  grid-gap: 0.75rem;
   .card {
     padding: 2rem 1rem;
     color: $black;
@@ -28,6 +28,7 @@
     }
   }
   &--star {
+    margin: 0.5rem 0;
     grid-template-columns: repeat(1, 1fr);
     height: 12rem;
     text-align: center;
@@ -65,11 +66,15 @@
 }
 
 @media screen and (max-width: $mobile) {
-  .cards {
-    padding: 1rem 0;
-    grid-template-columns: repeat(2, 1fr);
-  }
   .page {
     padding: 0.5rem;
+    .cards {
+      padding: 1rem 0;
+      grid-template-columns: repeat(2, 1fr);
+      grid-gap: 0.5rem;
+      &--star {
+        margin: 0;
+      }
+    }
   }
 }
