--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -4,7 +4,7 @@
 <div class="main">
   <nav class="navbar">
     <div>
-      <h2 routerLink="'/'"
+      <h2 routerLink=""
           class="navbar__logo">
         {{ 'SUPER_CHINESE' | translate }}
       </h2>
