--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -48,6 +48,8 @@
   .footer {
     padding: 0.5rem 8rem;
     height: 2rem;
+    background: $black;
+    color: $white;
     font-weight: 500;
     display: flex;
     align-items: flex-end;
