--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -45,7 +45,7 @@
               (click)="onEdit(value)"></span>
 
         <!-- Testing delete is OK-->
-        <span nz-tooltip
+        <!-- <span nz-tooltip
               [nzTooltipTitle]="'ACTION.DELETE' | translate"
               nz-popconfirm
               [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
@@ -56,7 +56,7 @@
               class="delete-button"
               nz-icon
               nzType="delete"
-              nzTheme="fill"></span>
+              nzTheme="fill"></span> -->
         <!-- {{ value }} -->
       </div>
     </ng-template>
