--- a/src/app/core/layout/change-language/change-language.component.html
+++ b/src/app/core/layout/change-language/change-language.component.html
@@ -1,4 +1,4 @@
-<select (change)="changeLanguage($event)">
+<!-- <select (change)="changeLanguage($event)">
         <option *ngIf="currentLanguage"
                 selected
                 [value]="currentLanguage">{{ currentLanguage | uppercase | translate }}
@@ -9,4 +9,30 @@
                 value="en">{{ 'EN' | translate }}</option>
         <option *ngIf="currentLanguage != 'zh'"
                 value="zh">{{ 'ZH' | translate }}</option>
-</select>
+</select> -->
+
+<div class="select"
+     nzTrigger="click"
+     nz-dropdown
+     nzPlacement="bottomRight"
+     [nzDropdownMenu]="languageMenu">
+        <span nz-icon
+              nzType="global"
+              nzTheme="outline"></span>
+        <span [style.margin-left.rem]="'0.5'"
+              nz-icon
+              nzType="down"
+              nzTheme="outline"></span>
+</div>
+<nz-dropdown-menu #languageMenu="nzDropdownMenu">
+        <ul nz-menu
+            nzSelectable>
+                <li nz-menu-item
+                    *ngFor="let item of languages"
+                    (click)="changeLanguage(item)">
+                        <img src="../../assets/images/{{item}}.png"
+                             height="13"
+                             width="22">
+                </li>
+        </ul>
+</nz-dropdown-menu>
