--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -64,7 +64,7 @@
                  let-rowIndex="rowIndex"
                  let-value>
       <div class="display">
-        <p style="margin-top: 0.375rem; color: #bf616a; font-family: MyFont; font-size: 1rem;">{{ value }}</p>
+        <p style="margin-top: 0.5rem; color: #bf616a; font-family: MyFont; font-size: 20px;">{{ value }}</p>
         <span nz-icon
               nzType="sound"
               nzTheme="fill"
