--- a/src/app/shared/modules/table/table.component.scss
+++ b/src/app/shared/modules/table/table.component.scss
@@ -3,6 +3,7 @@
 ::ng-deep {
   .ant-table.ant-table-small {
     font-family: sans-serif, monospace;
+    font-size: 16px;
     .ant-table-footer {
       padding: 0.5rem;
       background: $white;
