--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -3,7 +3,7 @@
              [total]="vm.total"
              [isLoading]="vm.isLoading"
              [headers]="headers"
-             isSelectable="false"
+             [isSelectable]="false"
              clientPagination="false">
     <div slot="top"
          class="top-table">
