--- a/src/app/shared/modules/audio-list/audio-list.component.scss
+++ b/src/app/shared/modules/audio-list/audio-list.component.scss
@@ -79,6 +79,7 @@
       scroll-snap-align: start;
       transition: $transition;
       &__description {
+        color: $gray;
         font-weight: 400;
         font-size: 14px;
       }
