--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -1,114 +1,44 @@
 @import 'src/variables.scss';
 @import 'animation';
 
-.main {
-  overflow-y: hidden;
-  .navbar {
-    background: $black;
-    padding: 1.5rem 8rem;
-    height: 8rem;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
-    &__logo {
-      color: $primary-color;
-      background: $linear-gradient;
-      background-clip: text;
-      font-weight: 600;
-      -webkit-text-fill-color: transparent;
-      cursor: pointer;
-    }
-    &__slogan {
-      color: $white;
-    }
-    &__menu {
-      display: flex;
-      flex-flow: row wrap;
-      align-items: center;
-      cursor: pointer;
-      .selected {
-        color: $primary-color;
-        opacity: 0.8;
-      }
-      a {
-        margin-right: 0.75rem;
-        font-size: larger;
-        color: $white;
-        transition: $transition;
-      }
-      a:hover {
-        background: $linear-gradient;
-        background-clip: text;
-        -webkit-text-fill-color: transparent;
-      }
-    }
-  }
-
-  .footer {
-    padding: 0.5rem 8rem;
-    height: 2rem;
-    background: $black;
-    color: $white;
-    font-weight: 500;
-    display: flex;
-    align-items: flex-end;
-  }
-
+.top {
+  padding: 0.25rem;
+  height: 1.75rem;
+  background: $linear-gradient;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
   .facebook {
-    position: absolute;
-    right: 4rem;
-    bottom: 7.5vh;
-    width: 3rem;
-    height: 3rem;
-    font-size: 1.5rem;
-    line-height: 3rem;
-    text-align: center;
-    color: $white;
-    background: $primary-color;
-    border-radius: 50%;
-    box-shadow: 0 0 25px 1px rgba($color: $black, $alpha: 0.5);
-    transition: $transition;
+    margin-right: 0.25rem;
+    color: #2374e1;
+    font-size: 14.5px;
   }
-  .facebook:hover {
-    opacity: 0.95;
-    box-shadow: 1px 1px 25px 1px rgba($color: $black, $alpha: 0.75);
-  }
+}
 
-  @media screen and (max-width: $tablet) {
-    .navbar {
-      padding: 1rem 4rem;
-    }
-    .footer {
-      padding: 0.5rem 4rem;
-    }
-    .facebook {
-      right: 1rem;
+.main {
+  padding: 1rem calc(3 * 100vw / 12);
+  height: calc(100vh - 10rem);
+  overflow-y: scroll;
+}
+.copy-right {
+  height: 1rem;
+  font-size: 11px;
+  font-weight: 600;
+}
+
+@media screen and (max-width: $tablet) {
+  .main {
+    padding: 1rem;
+  }
+}
+
+@media screen and (max-width: $mobile) {
+  .top {
+    .copy-right {
+      font-size: 10px;
     }
   }
-
-  @media screen and (max-width: $mobile) {
-    .navbar {
-      padding: 0 1rem;
-      flex-flow: column;
-      justify-content: center;
-      align-items: center;
-      &__logo {
-        margin-bottom: 0.5rem;
-      }
-      &__slogan {
-        display: none;
-      }
-    }
-    .footer {
-      padding: 0.5rem 1rem;
-    }
-    .facebook {
-      bottom: 2.5vh;
-      width: 2.5rem;
-      height: 2.5rem;
-      font-size: 1.25rem;
-      line-height: 2.5rem;
-    }
+  .main {
+    padding: 0.5rem;
   }
 }
