--- a/src/app/shared/modules/audio-list/audio-list.component.scss
+++ b/src/app/shared/modules/audio-list/audio-list.component.scss
@@ -56,8 +56,8 @@
   }
 
   .audio-list {
-    padding: 0.5rem 0.5rem 5px 2px;
-    height: calc(70vh - 10rem);
+    padding: 0.5rem 0.5rem 0.125rem 0;
+    height: calc(70vh - 9.5rem);
     background: rgba($color: $white, $alpha: 0.1);
     display: grid;
     grid-template-columns: repeat(2, 1fr);
