--- a/src/app/core/layout/layout.component.scss
+++ b/src/app/core/layout/layout.component.scss
@@ -20,15 +20,18 @@
   height: calc(100vh - 10rem);
   overflow-y: scroll;
 }
+
 .copy-right {
-  height: 1rem;
-  font-size: 11px;
-  font-weight: 600;
+  padding: 0 calc(3 * 100vw / 12);
+  font-size: 9px;
 }
 
 @media screen and (max-width: $tablet) {
   .main {
     padding: 1rem;
+  }
+  .copy-right {
+    padding: 0 1rem;
   }
 }
 
