--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -1,14 +1,27 @@
 <div class="top">
+  <app-change-language></app-change-language>
   <a class="facebook"
      nz-tooltip
      nzTooltipTitle="Facebook"
+     nzTooltipPlacement="left"
      target="_blank"
      href="https://www.facebook.com/lqtoann">
     <i nz-icon
        nzType="facebook"
        nzTheme="fill"></i>
   </a>
-  <app-change-language></app-change-language>
+  <span class="logout"
+        nz-icon
+        nzType="logout"
+        nzTheme="outline"
+        nz-tooltip
+        [nzTooltipTitle]="'LOGOUT' | translate"
+        nz-popconfirm
+        [nzPopconfirmTitle]="'CONFIRM_LOGOUT' | translate"
+        [nzOkText]="'CONFIRM' | translate"
+        [nzCancelText]="'CANCEL' | translate"
+        (nzOnConfirm)="confirm()"
+        (nzOnCancel)="cancel()"></span>
   <!-- <app-user-menu></app-user-menu> -->
 </div>
 <app-navbar></app-navbar>
