--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,31 +1,30 @@
-<div class="page">
-  <div class="cards--star">
-    <div routerLink="/dictionary"
-         class="card">
-      <span>{{ 'DICTIONARY' | translate }}</span>
-      <p class="sub-title"><small>{{ 'STAR' | translate }}</small></p>
-    </div>
+<p style="text-indent: 0.5rem"><i>{{'PLAYGROUND' | translate}}</i></p>
+<div class="cards--star">
+  <div routerLink="/dictionary"
+       class="card">
+    <span>{{ 'DICTIONARY' | translate }}</span>
+    <p class="sub-title"><small>{{ 'STAR' | translate }}</small></p>
   </div>
-  <div class="cards">
-    <div routerLink="/vocabulary"
-         class="card">
-      <span>{{ 'VOCABULARY' | translate }}</span>
-    </div>
-    <div routerLink="/curriculum"
-         class="card">
-      <span>{{ 'CURRICULUM' | translate }}</span>
-    </div>
-    <div routerLink="/exercise"
-         class="card">
-      <span>{{ 'EXERCISE' | translate }}</span>
-    </div>
-    <div routerLink="/course"
-         class="card">
-      <span>{{ 'COURSE' | translate }}</span>
-    </div>
-    <div routerLink="/about"
-         class="card">
-      <span>{{ 'ABOUT' | translate }}</span>
-    </div>
+</div>
+<div class="cards">
+  <div routerLink="/vocabulary"
+       class="card">
+    <span>{{ 'VOCABULARY' | translate }}</span>
+  </div>
+  <div routerLink="/curriculum"
+       class="card">
+    <span>{{ 'CURRICULUM' | translate }}</span>
+  </div>
+  <div routerLink="/exercise"
+       class="card">
+    <span>{{ 'EXERCISE' | translate }}</span>
+  </div>
+  <div routerLink="/course"
+       class="card">
+    <span>{{ 'COURSE' | translate }}</span>
+  </div>
+  <div routerLink="/about"
+       class="card">
+    <span>{{ 'ABOUT' | translate }}</span>
   </div>
 </div>
