--- a/src/app/core/layout/not-found/not-found.component.html
+++ b/src/app/core/layout/not-found/not-found.component.html
@@ -1,1 +1,6 @@
-<p class="not-found-page">Page Not Found</p>
+<div class="not-found-page">
+  <p>Page Not Found</p>
+  <button (click)="onClick()">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum architecto temporibus,
+    tenetur sint accusantium tempora consequuntur odit ratione illum ab nihil dolor at totam doloribus voluptatibus
+    minima officiis excepturi placeat.</button>
+</div>
