--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<p style="text-indent: 0.5rem"><i>{{'PLAYGROUND' | translate}}</i></p>
+<p class="playground"><i>{{'PLAYGROUND' | translate}}</i></p>
 <div class="cards--star">
   <div routerLink="/dictionary"
        class="card">
@@ -7,10 +7,6 @@
   </div>
 </div>
 <div class="cards">
-  <div routerLink="/vocabulary"
-       class="card">
-    <span>{{ 'VOCABULARY' | translate }}</span>
-  </div>
   <div routerLink="/curriculum"
        class="card">
     <span>{{ 'CURRICULUM' | translate }}</span>
@@ -18,10 +14,6 @@
   <div routerLink="/exercise"
        class="card">
     <span>{{ 'EXERCISE' | translate }}</span>
-  </div>
-  <div routerLink="/course"
-       class="card">
-    <span>{{ 'COURSE' | translate }}</span>
   </div>
   <div routerLink="/about"
        class="card">
