--- a/src/app/shared/modules/vocabulary-list/vocabulary-list.component.scss
+++ b/src/app/shared/modules/vocabulary-list/vocabulary-list.component.scss
@@ -3,7 +3,7 @@
 @import 'spinner';
 
 .tab-content {
-  margin-top: 0.5rem;
+  padding: 0.5rem 0;
   height: calc(100vh - 14rem);
   overflow-y: scroll;
   .wordList {
