--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -1,127 +1,45 @@
 <ng-container *ngIf="(vm$ | async) as vm">
-  <app-table [records]="vm.words"
-             [total]="vm.total"
-             [isLoading]="vm.isLoading"
-             [headers]="headers"
-             [isSelectable]="false"
-             clientPagination="false">
-    <div slot="top"
-         class="top-table">
-      <button nz-button
-              class="create-button"
-              (click)="onCreate()"><span nz-icon
-              nzType="plus"
-              nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
-      <nz-input-group class="search-input"
-                      [nzSuffix]="switch">
-        <input *ngIf="vm.isChineseVietnameseSearch"
-               nz-input
-               [placeholder]="'ACTION.LOOK_UP.CHI_VIE' | translate"
-               (keydown.enter)="onSearch($event)" />
-        <input *ngIf="!vm.isChineseVietnameseSearch"
-               nz-input
-               [placeholder]="'ACTION.LOOK_UP.VIE_CHI' | translate"
-               (keydown.enter)="onSearch($event)" />
-      </nz-input-group>
-      <ng-template #switch>
-        <nz-switch [ngModel]="vm.isChineseVietnameseSearch"
-                   (ngModelChange)="onChange($event)"></nz-switch>
-      </ng-template>
-      <strong class="totals"><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></strong>
+  <div class="top">
+    <button nz-button
+            class="create-button"
+            (click)="onCreate()"><span nz-icon
+            nzType="plus"
+            nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
+    <nz-input-group class="search-input"
+                    [nzSuffix]="switch">
+      <input *ngIf="vm.isChineseVietnameseSearch"
+             nz-input
+             [placeholder]="'ACTION.LOOK_UP.CHI_VIE' | translate"
+             (keydown.enter)="onSearch($event)" />
+      <input *ngIf="!vm.isChineseVietnameseSearch"
+             nz-input
+             [placeholder]="'ACTION.LOOK_UP.VIE_CHI' | translate"
+             (keydown.enter)="onSearch($event)" />
+    </nz-input-group>
+    <ng-template #switch>
+      <nz-switch [ngModel]="vm.isChineseVietnameseSearch"
+                 (ngModelChange)="onChange($event)"></nz-switch>
+    </ng-template>
+    <strong class="totals"><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></strong>
+  </div>
+  <ng-container *ngIf="vm.isLoading; else wordListTemplate">
+    <div style="display: flex; justify-content: center; margin-top: 2rem;">
+      <nz-spin nzSimple
+               [nzSize]="'large'"></nz-spin>
     </div>
-    <ng-template appTableCell="speak"
-                 let-rowIndex="rowIndex"
-                 let-value>
-    </ng-template>
-    <ng-template appTableCell="actions"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      <div class="actions">
-        <span nz-tooltip
-              [nzTooltipTitle]="'ACTION.UPDATE' | translate"
-              nz-icon
-              nzType="edit"
-              nzTheme="fill"
-              (click)="onEdit(value)"></span>
-
-        <!-- Testing delete is OK-->
-        <!-- <span nz-tooltip
-              [nzTooltipTitle]="'ACTION.DELETE' | translate"
-              nz-popconfirm
-              [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
-              nzOkText="OK"
-              nzCancelText="Cancel"
-              (nzOnConfirm)="onDelete(value)"
-              (nzOnCancel)="onCancel()"
-              class="delete-button"
-              nz-icon
-              nzType="delete"
-              nzTheme="fill"></span> -->
-        <!-- {{ value }} -->
-      </div>
-    </ng-template>
-    <ng-template appTableCell="display"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      <div class="display">
-        <p style="margin-top: 0.5rem; color: #bf616a; font-family: MyFont; font-size: 18px;">{{ value }}</p>
-        <span nz-icon
-              nzType="sound"
-              nzTheme="fill"
-              (click)="onSpeak(value)"></span>
-      </div>
-    </ng-template>
-    <ng-template appTableCell="lowercase"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      {{ value | lowercase }}
-    </ng-template>
-    <ng-template appTableCell="titlecase"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      {{ value | titlecase }}
-    </ng-template>
-    <ng-template appTableCell="hsk"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      <ng-container [ngSwitch]="value">
-        <ng-container *ngSwitchCase="'hsk1'">
-          <nz-tag [nzColor]="'cyan'">HSK 1</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk2'">
-          <nz-tag [nzColor]="'blue'">HSK 2</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk3'">
-          <nz-tag [nzColor]="'geekblue'">HSK 3</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk4'">
-          <nz-tag [nzColor]="'purple'">HSK 4</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk5'">
-          <nz-tag [nzColor]="'volcano'">HSK 5</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk6'">
-          <nz-tag [nzColor]="'red'">HSK 6</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'hsk79'">
-          <nz-tag [nzColor]="'magenta'">HSK 7+</nz-tag>
-        </ng-container>
-        <ng-container *ngSwitchCase="'z---'">
-          <nz-tag>---------</nz-tag>
-        </ng-container>
-      </ng-container>
-    </ng-template>
-    <ng-template appTableCell="date"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      <div>{{ value | date: 'hh:mm:ss dd/MM/yyyy' }}</div>
-    </ng-template>
-    <ng-template appTableCell="ellipsis"
-                 let-rowIndex="rowIndex"
-                 let-value>
-      <div style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">{{ value }}</div>
-    </ng-template>
-  </app-table>
+  </ng-container>
+  <ng-template #wordListTemplate>
+    <ul class="wordList">
+      <li *ngFor="let word of vm.words"
+          class="word">
+        <span class="word--name">{{ word.display }}</span>
+        <div class="wrap">
+          <span class="word--pinyin">{{ word.pinyin }}</span>
+          <span class="word--define">{{ word.define | translate }}</span>
+        </div>
+      </li>
+    </ul>
+  </ng-template>
 </ng-container>
 
 <app-dictionary-form></app-dictionary-form>
