--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -1,13 +1,18 @@
 @import 'src/variables';
 
+.playground {
+  text-indent: 0;
+  margin-bottom: 0.5rem;
+}
+
 .cards {
-  padding: 1rem 0;
+  padding: 0.5rem 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-flow: row;
   grid-gap: 0.5rem;
   .card {
-    padding: 2rem 1rem;
+    padding: 2.5rem 1rem;
     color: $black;
     font-size: 1rem;
     font-weight: 600;
@@ -30,11 +35,11 @@
   &--star {
     margin: 0.5rem 0;
     grid-template-columns: repeat(1, 1fr);
-    height: 12rem;
+    height: 14rem;
     text-align: center;
     .card {
       padding: 1rem 0;
-      height: 12rem;
+      height: 14rem;
       display: flex;
       flex-flow: column wrap;
       justify-content: center;
@@ -66,11 +71,10 @@
 }
 
 @media screen and (max-width: $mobile) {
+  .playground {
+    text-indent: 0.5rem;
+  }
   .cards {
-    padding: 1rem 0;
     grid-template-columns: repeat(2, 1fr);
-    &--star {
-      margin: 0;
-    }
   }
 }
