--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -3,7 +3,7 @@
     background: $white;
   }
   .ant-tabs-top > .ant-tabs-nav {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0;
     box-shadow: 0 1px 25px 1px rgba($color: $black, $alpha: 0.1);
   }
   .ant-tabs-ink-bar {
@@ -42,7 +42,7 @@
 }
 
 nz-tabset {
-  height: calc(100vh - 11rem);
+  height: calc(100vh - 12rem);
   overflow-y: hidden;
 }
 
