--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -10,7 +10,7 @@
        nzType="facebook"
        nzTheme="fill"></i>
   </a>
-  <span class="logout"
+  <!-- <span class="logout"
         nz-icon
         nzType="logout"
         nzTheme="outline"
@@ -21,7 +21,7 @@
         [nzOkText]="'CONFIRM' | translate"
         [nzCancelText]="'CANCEL' | translate"
         (nzOnConfirm)="confirm()"
-        (nzOnCancel)="cancel()"></span>
+        (nzOnCancel)="cancel()"></span> -->
   <!-- <app-user-menu></app-user-menu> -->
 </div>
 <app-navbar></app-navbar>
