--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -1,11 +1,38 @@
 <li class="word">
   <ng-content select="[slot=index]"></ng-content>
-  <span class="word--id">{{ word._id }}</span>
   <span class="word--name">{{ word.display }}</span>
-  <span class="word--pinyin">{{ word.pinyin }}</span>
-  <span class="word--chivi">{{ word.chinaVietnamWord | titlecase }}</span>
+  <span class="word--chivi">[{{ word.chinaVietnamWord | titlecase }}]</span>
+  <span class="word--pinyin">[{{ word.pinyin }}]</span>
+  <span class="word--hsk">
+    <ng-container [ngSwitch]="word.hsk">
+      <ng-container *ngSwitchCase="'hsk1'">
+        <nz-tag [nzColor]="'cyan'">HSK 1</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk2'">
+        <nz-tag [nzColor]="'blue'">HSK 2</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk3'">
+        <nz-tag [nzColor]="'geekblue'">HSK 3</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk4'">
+        <nz-tag [nzColor]="'purple'">HSK 4</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk5'">
+        <nz-tag [nzColor]="'volcano'">HSK 5</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk6'">
+        <nz-tag [nzColor]="'red'">HSK 6</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'hsk79'">
+        <nz-tag [nzColor]="'magenta'">HSK 7+</nz-tag>
+      </ng-container>
+      <ng-container *ngSwitchCase="'z---'">
+        <nz-tag>--------</nz-tag>
+      </ng-container>
+    </ng-container>
+  </span>
   <span class="word--define">{{ word.define | translate }}</span>
-  <div class="actions">
+  <!-- <div class="actions">
     <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           nz-icon
@@ -24,5 +51,5 @@
           nz-icon
           nzType="delete"
           nzTheme="fill"></span>
-  </div>
+  </div> -->
 </li>
