--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -2,39 +2,42 @@
 
 .word {
   padding: 0.5rem 0;
-  height: 4rem;
-  border-bottom: 1px solid rgba($color: $gray, $alpha: 0.3);
-  // display: grid;
-  // grid-template-columns: repeat(24, 1fr);
-  // grid-template-rows: repeat(24, 1fr);
-  // grid-auto-flow: row;
-  // grid-gap: 0.5rem;
+  border-top: 1px solid rgba($color: $gray, $alpha: 0.3);
   display: flex;
+  flex-flow: row wrap;
   justify-content: flex-start;
-  align-items: center;
+  align-items: baseline;
   scroll-snap-align: start;
-  &--index {
-    margin-right: 0.5rem;
-    width: 1rem;
-    font-size: 10px;
-  }
   &--name {
-    margin-right: 0.5rem;
-    width: 4rem;
+    width: 6rem;
     color: $red;
-    font-size: 20px;
+    font-size: 24px;
+    line-height: 100%;
     font-weight: 400;
     letter-spacing: 1px;
   }
   &--chivi {
-    margin-right: 0.5rem;
+    // width: 7rem;
+    color: #81a1c1;
   }
   &--pinyin {
-    margin-right: 0.5rem;
+    // width: calc(100% - 14rem);
     color: $primary-color;
   }
+  &--hsk {
+    margin-left: auto;
+    .ant-tag {
+      margin: 0;
+      padding: 0 0.25rem;
+      width: 3rem;
+      border-width: 1.5px;
+      border-radius: 12.5px;
+      font-weight: 400;
+    }
+  }
   &--define {
-    color: #81a1c1;
+    width: 100%;
+    color: $gray;
   }
   .actions {
     margin-left: auto;
