--- a/src/app/core/layout/navbar/navbar.component.scss
+++ b/src/app/core/layout/navbar/navbar.component.scss
@@ -27,6 +27,7 @@
 
 @media screen and (max-width: $mobile) {
   .navbar {
+    padding: 1rem 0;
     flex-flow: column;
     justify-content: flex-end;
     align-items: center;
