--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -22,8 +22,8 @@
     cursor: pointer;
   }
   .search-input {
-    padding: 0.25 0.5rem;
-    margin-left: 0.5rem;
+    padding: 0.25;
+    margin: 0 0.5rem;
     width: calc(25vw + 5rem);
     border-radius: 0.5rem;
   }
