--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -32,7 +32,7 @@
     </ng-container>
   </span>
   <span class="word--define">{{ word.define | translate }}</span>
-  <!-- <div class="actions">
+  <div class="actions">
     <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           nz-icon
@@ -51,5 +51,5 @@
           nz-icon
           nzType="delete"
           nzTheme="fill"></span>
-  </div> -->
+  </div>
 </li>
