--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -1,8 +1,11 @@
 <li class="word">
   <ng-content select="[slot=index]"></ng-content>
   <span class="word--name">{{ word.display }}</span>
-  <span class="word--chivi">[{{ word.chinaVietnamWord | titlecase }}]</span>
-  <span class="word--pinyin">[{{ word.pinyin }}]</span>
+  <div class="word--wrap">
+    <span class="word--wrap--chivi">[{{ word.chinaVietnamWord | titlecase }}]</span>
+    <span class="word--wrap--pinyin">[{{ word.pinyin }}]</span>
+    <span class="word--wrap--define">{{ word.define | translate }}</span>
+  </div>
   <span class="word--hsk">
     <ng-container [ngSwitch]="word.hsk">
       <ng-container *ngSwitchCase="'hsk1'">
@@ -31,15 +34,14 @@
       </ng-container>
     </ng-container>
   </span>
-  <span class="word--define">{{ word.define | translate }}</span>
   <div class="actions">
-    <span nz-tooltip
+    <!-- <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           nz-icon
           nzType="edit"
           nzTheme="fill"
-          (click)="onEdit(word._id)"></span>
-    <span nz-tooltip
+          (click)="onEdit(word._id)"></span> -->
+    <!-- <span nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
           nz-popconfirm
           [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate"
@@ -50,6 +52,6 @@
           class="delete-button"
           nz-icon
           nzType="delete"
-          nzTheme="fill"></span>
+          nzTheme="fill"></span> -->
   </div>
 </li>
