--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -2,14 +2,23 @@
   <div class="top">
     <button nz-button
             class="create-button"
-            (click)="onCreate()"><span nz-icon
+            (click)="onCreate()">
+      <span nz-icon
             nzType="plus"
-            nzTheme="outline"></span>{{ 'ACTION.CREATE' | translate }}</button>
+            nzTheme="outline">
+      </span>
+      <span>{{ 'ACTION.CREATE' | translate }}</span>
+    </button>
     <input class="search-input"
            nz-input
            [placeholder]="'ACTION.SEARCH' | translate"
-           [(ngModel)]="value"
            (keydown.enter)="onSearch($event)" />
+    <nz-input-number class="scroll-input"
+                     [nzPlaceHolder]="'Scroll to index'"
+                     (keydown.enter)="onScrollToIndex($event)"
+                     [nzMin]="1"
+                     [nzMax]="vm.words.length"
+                     [nzStep]="1"></nz-input-number>
     <strong class="totals"><i>{{ 'TOTALS' | translate: { totals: vm.total } }}</i></strong>
   </div>
   <ng-container *ngIf="vm.isLoading; else wordListTemplate">
